# Monocular_Structured_Light

./: CMakeLists.txt  README.md  main.cpp
calibrated_parameters/: leftCam.ini  leftCam_data.xml  leftProj.ini  leftProj_data.xml  rightCam.ini  rightCam.txt  rightCam_data.xml  rightProj.ini  rightProj.txt  rightProj_data.xml
camke-build/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Build.h  Camera.h  Phase.h  Project.h  types.h  utils.h
src/: Build.cpp  Camera.cpp  Phase.cpp  Project.cpp  utils.cpp
